crates/watt_tests/src/codegen/snapshots/watt_tests__codegen__semi__if_should_not_require_semi.snap
---
source: crates/watt_tests/src/codegen/semi.rs
expression: "\nfn a(): int {\n    if true {\n\n    } else {\n\n    }\n    1 + 1\n}\n\nfn main() {}\n        "
---
Source code:

fn a(): int {
    if true {

    } else {

    }
    1 + 1
}

fn main() {}
        

Generation result:
import {
    $$match,
    $$equals,
    $$todo,
    $$range,
    $$EqPattern,
    $$UnwrapPattern,
    $$WildcardPattern,
    $$BindPattern,
    $$VariantPattern,
} from "./prelude.js"

export function a() {
    (() => {
        if (true) {}
        else {}
    })()
    return 1 + 1
}

export function main() {}
